# jitter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: overview.md
src/: bake.rs  font.rs  jitter.rs  layout.rs  main.rs  png.rs  svg.rs
