[package]
name = "jitter"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "Add natural handwriting-like variation to digital text"
homepage = "https://github.com/kako-jun/jitter"
repository = "https://github.com/kako-jun/jitter"
documentation = "https://docs.rs/jitter"
readme = "README.md"
keywords = ["font", "text", "glyph", "handwriting", "jitter"]
categories = ["command-line-utilities", "graphics"]
exclude = [".github/", "target/"]
rust-version = "1.78.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
skrifa = "0.26"
rand = "0.8"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
